# cs100_rpg_goat

./: (final ver.) RPGOATS UML diagram  CMakeLists.txt  README.md  endingForItem8.txt  generalEnding.txt  item.cpp  item.h  selectionMain  story1.txt  story10.txt  story3.txt  story5.txt  test.cpp
test/: CMakeLists.txt  test.cpp
texts/: endingForItem10.txt  endingForItem9.txt  story2.txt  story4.txt  story6.txt  story7.txt  story8.txt  story9.txt
